--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,15 @@
 <head>
   <title>CalendarioNucleo</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', 'https://fonts.googleapis.com/css?family=Fira+Sans|Julius+Sans+One|Archivo+Black|Bebas+Neue' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
+<%= render 'layouts/navigation' %>
 <%= yield %>
+<%= render 'layouts/footer' %>
 
 </body>
 </html>
