--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,6 +1,6 @@
 #calendar {
   margin: 0 auto;
-  width: 80%;
+  width: 60%;
 }
 
 /* Navigation Styles */
@@ -16,7 +16,7 @@
   margin: 30px auto;
 }
 
-.title {
+.title, .title-2 {
   text-align: center;
   font-size: 2.5em;
   margin-top: 35px;
@@ -28,7 +28,21 @@
 
 /* Activities Styles */
 
+.atividades {
+  width: 60%;
+}
+
+.info {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.form {
+  width: 25%;
+}
+
 .event {
+  margin-top: 10px;
   padding: 20px 5%;
 }
 
@@ -41,8 +55,36 @@
 
 /* Media Queries */
 
-@media (min-width: 620px) {
+@media (min-width: 611px) {
     .logo {
         padding: 0% 2%
     }
+    .title {
+      font-size: 1em;
+    }
+    .atividades, #calendar {
+      width: 80%;
+    }
+    .label {
+      font-size: 50%;
+    }
+    .form {
+      width: 50%;
+    }
+
+}
+
+@media (min-width: 1000px) {
+   .label {
+     font-size: 75%;
+   } 
+   .form {
+     width: 25%;
+   }
+   .title {
+    font-size: 2.5em;
+   }
+   .atividades, #calendar {
+    width: 60%;
+   }
 }
