--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,8 +1,8 @@
-<%= form_for :event, url: events_path, :html => {:class => "form-horizontal center"} do |f| %>
+<%= form_for :event, url: event_path(@event), method: :patch do |f| %>
   
  <div class="container form">
   
-  <h3>Criar Novo Evento</h3>
+  <h3>Editar Evento</h3>
   
   <% if @event.errors.any? %>
     <div id="error_explanation">
